# shortwave

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  TODO.md  de.haeckerfelix.GradioDevel.json  de.haeckerfelix.ShortwaveDevel.json  meson.build  shortwave.doap
build-aux/: cargo.sh  grabber.sh  new-release.sh
data/: de.haeckerfelix.Shortwave.appdata.xml.in.in  de.haeckerfelix.Shortwave.desktop.in.in  de.haeckerfelix.Shortwave.gschema.xml  de.haeckerfelix.Shortwave.service.in  meson.build  resources.xml
data/gtk/: gtk_controller.ui  library.ui  menu.ui  player.ui  shortcuts.ui  song_listbox.ui  station_dialog.ui  station_flowbox.ui  station_infobox.ui  station_listbox.ui  station_row.ui  style.css  window.ui
data/icons/: meson.build
hooks/: meson.build  pre-commit.in
src/: app.rs  config.rs.in  gstreamer_backend.rs  library.rs  main.rs  meson.build  player.rs  search.rs  song.rs  station_model.rs  station_object.rs  window.rs
src/model/: mod.rs  object_wrapper.rs  song_model.rs  station_model.rs
src/player/: controller.rs  gstreamer_backend.rs  playback_state.rs
src/player/controller/: gtk_controller.rs  mpris_controller.rs
src/widgets/: mod.rs  notification.rs  song_listbox.rs  song_row.rs  station_dialog.rs  station_flowbox.rs  station_infobox.rs  station_listbox.rs  station_row.rs
