[package]
name = "shortwave"
version = "0.1.0"
authors = ["Felix Häcker <haeckerfelix@gnome.org>"]
build = "build.rs"
edition = "2018"

[dependencies]
gtk = { version="0.6.0", features=["v3_22"] }
libhandy = { version="0.3.0", features=["v0_0_7"] }
glib = { version="0.7.0", features=["subclassing"] }
gio = { version="0.6.0", features=["v2_46"] }
gdk = "0.10.0"
gstreamer = "0.13.0"
gstreamer-pbutils = "0.13.0"
rustio = { git="https://gitlab.gnome.org/haecker-felix/Rustio.git" }
mpris-player = { git="https://gitlab.gnome.org/World/Rust/mpris-player" }
log = "0.4"
pretty_env_logger = "0.3.0"
rusqlite = "0.13"
quick-error = "1.2.2"
restson = "0.4"
uuid = { version = "0.7", features = ["v4"] }
chrono = "0.4.6"
rust_cast = "0.14.0"
mdns = "0.3.1"
serde = "1.0.89"
serde_json = "1.0.39"
serde_derive = "1.0.89"
lazy_static = "1.3.0"
matches = "0.1.8"
open = "1.2.2"
